updated current projects and availability

--- a/now.html
+++ b/now.html
@@ -24,14 +24,13 @@
   <article class="pa3 measure-wide center mt6">
     <h1 class="f2 b">Now I am...</h1>
 <ul>
-  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 5th June 2017 onwards.</li>
-  <li>Working on the front-end of an Ether exhange for a client. Ethereum is like Bitcoin. If you are new to crypocurrencies, here is <a href="https://www.youtube.com/watch?v=W0qn3oPYo5c">a great primer</a>. This is an interesting project because its my first paid project using Redux.</li>
-  <li>Working on an <a href="https://jp.tamuro.org/">anonymous audio chat application for the web</a>. This is an interesting project because it's my first experience with real-time communication technologies on the web.</li>
-  <li>Sticking to my new year's resolution to <a href="https://www.beeminder.com/joshpitzalis/run">run regularly</a>.</li>
+  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 15th July 2017 onwards.</li>
+  <li>Working on an <a href="https://en.tamuro.org/">anonymous audio chat application for the web</a>.</li>
+  <li>Building an online store for a tiger reserve in the western ghats, in southern India.</li>
   <li>Keeping regular with updates on my <a href="http://tinyletter.com/joshpitzalis">business building adventures</a>.</li>
 </ul>
 
-<p>Last updated April 15th, 2017.</p>
+<p>Last updated June 14th, 2017.</p>
 
     <img src='./img/wiggle.svg' class='mv5'/>
     <main class="mw6 center">
@@ -42,11 +41,11 @@
         <div class="cf">
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Total Projects on the Web.</dd>
-            <dd class="f3 fw6 ml0">21</dd>
+            <dd class="f3 fw6 ml0">22</dd>
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Front-end</dd>
-            <dd class="f3 fw6 ml0">20</dd>
+            <dd class="f3 fw6 ml0">21</dd>
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Full Stack</dd>
@@ -58,6 +57,25 @@
 
 
     <ul class="list pa0 ma0" >
+      
+      <li class="w-100 bb b--black-10">
+        <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://prolifiko.com/">
+          <b class="db f3 mb1">AutoMTE Etherium Exchange</b>
+          <p class="f5 db lh-copy measure black-70 b">
+An online Etherium Exchange. Ethereum is a cryptocurrency, much like Bitcoin.</p>
+          <p class="f5 db lh-copy measure black-70">
+            I worked on the front-end of this project. The deisgns were provided, I translated all the designs to react components. I also built some of the non-critical modules, like the chat module for live trades. This was an interesting project because its my first paid project using Redux.
+          </p>
+          <p class="f5 db lh-copy measure black-70 i">
+            "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
+- Bec Evans and Chris Smith, Founders of Prolifiko
+          </p>
+          <dl class="mt2 f6">
+            <dt class="clip">Status</dt>
+            <dd class="ml0 black-70 ttu">Preparing for closed beta-testing at the moment.</dd>
+          </dl>
+        </a>
+      </li>
 
       <li class="w-100 bb b--black-10">
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://prolifiko.com/">
