updated my now page

--- a/now.html
+++ b/now.html
@@ -24,18 +24,16 @@
   <article class="pa3 measure-wide center mt6">
     <h1 class="f2 b">Now I am...</h1>
 <ul>
-  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 15th July 2017 onwards.</li>
-  <li>Working on an <a href="https://en.tamuro.org/">anonymous audio chat application for the web</a>.</li>
   <li>Building an online store for a tiger reserve in the western ghats, in southern India.</li>
   <li>Keeping regular with updates on my <a href="http://tinyletter.com/joshpitzalis">business building adventures</a>.</li>
+  <li>Available for <a href="http://joshpitzalis.com/design">new project work</a> from the 28th July 2017 onwards.</li>
 </ul>
 
-<p>Last updated June 14th, 2017.</p>
+<p>Last updated July 12th, 2017.</p>
 
     <img src='./img/wiggle.svg' class='mv5'/>
     <main class="mw6 center">
       <h2 class="f3 b">Past Projects</h2>
-
 
       <article data-name="slab-stat-small" class="mb4">
         <div class="cf">
@@ -45,11 +43,11 @@
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Front-end</dd>
-            <dd class="f3 fw6 ml0">21</dd>
+            <dd class="f3 fw6 ml0">20</dd>
           </dl>
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="f6 fw4 ml0">Full Stack</dd>
-            <dd class="f3 fw6 ml0">1</dd>
+            <dd class="f3 fw6 ml0">2</dd>
           </dl>
 
         </div>
@@ -57,7 +55,24 @@
 
 
     <ul class="list pa0 ma0" >
-      
+
+      <li class="w-100 bb b--black-10">
+        <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="https://en.tamuro.me/">
+          <b class="db f3 mb1">Tamuro</b>
+          <p class="f5 db lh-copy measure black-70 b">
+            Tamuro is an audio chat application to give advice, share knowledge, and talk about things that interest you — with two random strangers.
+          </p>
+          <p class="f5 db lh-copy measure black-70">I built the front and backend of this application. I cannot take credit for designing the UI, the designs were provided.
+          </p>
+          <p class="f5 db lh-copy measure black-70">I built the project in react without needing to resort to redux. For the backend I used firebase and cloud functions.
+          </p>
+          <dl class="mt2 f6">
+            <dt class="clip">Status</dt>
+            <dd class="ml0 black-70 ttu">Complete, Live.</dd>
+          </dl>
+        </a>
+      </li>
+
       <li class="w-100 bb b--black-10">
         <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="http://prolifiko.com/">
           <b class="db f3 mb1">AutoMTE Etherium Exchange</b>
@@ -108,21 +123,6 @@ A personal writing coach app.</p>
           <dl class="mt2 f6">
             <dt class="clip">Status</dt>
             <dd class="ml0 black-70 ttu">Complete.</dd>
-          </dl>
-        </a>
-      </li>
-
-      <li class="w-100 bb b--black-10">
-        <a class="link dt w-100 bb b--black-10 pb2 mt2 dim" href="https://tamuro.org/">
-          <b class="db f3 mb1">Tamuro</b>
-          <p class="f5 db lh-copy measure black-70 b">
-            An anonymous chat application.
-          </p>
-          <p class="f5 db lh-copy measure black-70">I built the front end of the entire application in React. 22 pages in all. The project will be released once the backend is complete.
-          </p>
-          <dl class="mt2 f6">
-            <dt class="clip">Status</dt>
-            <dd class="ml0 black-70 ttu">Complete, Pending Release.</dd>
           </dl>
         </a>
       </li>
