--- a/index.html
+++ b/index.html
@@ -1,128 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <title>
 
-    </title>
-    <meta name="author" content="">
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./style.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <title>
 
-  </head>
-  <body class='gentium black-70 lh-copy'>
-    <nav class="db dt-l w-100 border-box pa4 ph5-l">
-      <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-        <a class="dim dib ttu f6 grow no-underline br-pill ph3 pv2 mb2 dib white bg-cucumber" href="http://joshpitzalis.com/design">Order a Design Proposal</a>
-      </div>
-    </nav>
+  </title>
+  <meta name="author" content="">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./style.css" />
 
-  <!-- <nav class="db dt-l w-100 border-box mb5 pa3">
-    <a class="db dtc-l v-mid mid-gray link w-100 w-50-l tc tl-l mb2 mb0-l" href="#" title="Home">
-    <h1 class="link black-70 f-5 dib mr4-l pl4-l
-    " href="/" title="Home"></h1>
-    </a>
-  </nav> -->
+
+</head>
+
+<body class='sans-serif black-70 lh-copy mid-gray'>
+
+
 
   <div class='pa3 mt4 mw9 center'>
-  <h1 class="f2 b pa3-m pa4-l">Websites for Micro Businesses.</h1>
-  <img src='./img/wiggle.svg' class='mv3 pa3-m pa4-l'/>
+
+    <h1 class="f3 f1-m f-headline-l pl3-m pl4-l pt5"> Josh Pitzalis</h1>
+    <h2 class="f3 fw3 mid-gray lh-title pl3-m pl4-l ">Simple, fast, responsive web development for small businesses.</h2>
+
+    <img src='./img/wiggle.svg' class='mv3 pa3-m pa4-l' />
   </div>
 
   <article class="cf pa3 mw9 center">
 
-    <!-- <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
-    <h2 class="lh-title f3 b mt0">
-      Simple, Fast, responsive Web development for Small Businesses.
-    </h2>
-  </header> -->
 
-  <section class="fl w-100 pb3">
-    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
-      <p class="f4 lh-copy measure">
-        "Super easy to work with."
-      </p>
-      <p>
-        <em>- Kristin Braddock,
-        <br/>Founder of <a href='http://sewingnewfutures.com/'>Sewing New Futures</a></em>
-      </p>
-    </div>
-    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
-      <p class="f4 lh-copy measure">
-        "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above and beyond."
-      </p>
-      <p>
-        <em>- Bec Evans and Chris Smith, <br/>
-          Founders of <a href='http://prolifiko.com/'>Prolifiko</a></em>
-      </p>
-    </div>
-    <div class="fl w-100 w-33-m w-33-l pa3-m pa4-l">
-      <p class="f4 lh-copy measure">
-        "Working with Josh was a great experience. His sense of design, aesthetics and flow of information was amazing. I am very pleased with his work and recommend him very highly."
-      </p>
-      <p>
-        <em>- Raju Arora, <br/>Founder of <a href='http://www.kahanibaaz.com/'>Kahanibaaz</a></em>
-      </p>
-    </div>
-  </section>
+    <section>
 
-  <section class="cf w-100 pa3-ns " >
+      <article class=" bb  b--black-10">
+        <a class="pl3-m pl4-l db pv4  ph0 no-underline mid-gray " href="https://www.realsies.com/">
+          <div class="flex flex-column flex-row-ns">
 
-    <article class="fl w-100 w-33-m w-33-l pa2-ns">
-      <a href="http://www.kahanibaaz.com/" class="ph2 ph0-ns pb3 link db dim tc">
-        <img src="./img/kahanibaaz.svg" />
-        <h3 class="f5 f4-ns mb0 black-90 tc">Kahanibaaz</h3>
-        <h3 class="f6 f5 fw4 mt2 black-60 tc">Website Design</h3>
-      </a>
-    </article>
-  <article class="fl w-100 w-33-m w-33-l pa2-ns">
-    <a href="http://www.ypfafrica.com/" class="ph2 ph0-ns pb3 link db dim tc">
-      <img src="./img/ypf.svg" />
-      <h3 class="f5 f4-ns mb0 black-90 tc">YPF Africa</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60 tc">Landing Page Design</h3>
-    </a>
+            <div class="w-100 w-50-ns pb3">
+              <h4 class="f3  mt0 lh-title underline">Realsies.com</h3>
+                <p class="f6 f5-l lh-copy">
+                  A web application to help people put there money where their mouth is.
+                </p>
+                <time class="f6 lh-copy mv0 pb4">September 2017</time>
+            </div>
+            <div class="pr3-ns mb4 mb0-ns w-100 w-50-ns">
+              <img src="./img/realsiesBrowser.png" class="db" alt="realsies">
+            </div>
+          </div>
+        </a>
+      </article>
+
+      <article class=" bb  b--black-10">
+        <a class="pl3-m pl4-l db pv4 ph0 no-underline mid-gray " href="https://ezether.com/">
+
+          <div class="flex flex-column flex-row-ns">
+
+            <div class="w-100 w-50-ns pb3">
+              <h4 class="f3  mt0 lh-title underline">Ezether.com</h3>
+                <p class="f6 f5-l lh-copy">
+                  India's first peer-to-peer ethereum exchange.
+                </p>
+                <time class="f6 lh-copy mv0 pb4">August 2017</time>
+            </div>
+            <div class="pr3-ns mb4 mb0-ns w-100 w-50-ns">
+              <img src="./img/ezetherBrowser.png" class="db" alt="tamuro">
+            </div>
+          </div>
+        </a>
+      </article>
+
+      <article class="bb b--black-10">
+        <a class="pl3-m pl4-l db pv4 ph0 no-underline mid-gray " href="https://tamuro.me/">
+
+          <div class="flex flex-column flex-row-ns">
+
+            <div class="w-100 w-50-ns pb3">
+              <h4 class="f3  mt0 lh-title underline">Tamuro.me</h3>
+                <p class="f6 f5-l lh-copy">
+                  An audio chat application for strangers.
+                </p>
+                <time class="f6 lh-copy mv0 pb4">July 2017</time>
+            </div>
+            <div class="pr3-ns mb4 mb0-ns w-100 w-50-ns">
+              <img src="./img/tamuroBrowser.png" class="db" alt="tamuro">
+            </div>
+          </div>
+        </a>
+      </article>
+
+    </section>
+
+
+
+
+    <section class="fl w-100 pb3">
+      <div class="fl w-100 pv4 w-33-m w-33-l pa3-m pa4-l">
+        <p class="f4 lh-copy measure">
+          "Super easy to work with."
+        </p>
+        <p>
+          <em>- Kristin Braddock,
+            <br/>Founder of
+            <a href='http://sewingnewfutures.com/'>Sewing New Futures</a>
+          </em>
+        </p>
+      </div>
+      <div class="fl w-100 pv4 w-33-m w-33-l pa3-m pa4-l">
+        <p class="f4 lh-copy measure">
+          "Josh was a delight to work with; always cooperative, creative, responsive and technically excellent at his job - went above
+          and beyond."
+        </p>
+        <p>
+          <em>- Bec Evans and Chris Smith,
+            <br/> Founders of
+            <a href='http://prolifiko.com/'>Prolifiko</a>
+          </em>
+        </p>
+      </div>
+      <div class="fl w-100 pv4 w-33-m w-33-l pa3-m pa4-l">
+        <p class="f4 lh-copy measure">
+          "Working with Josh was a great experience. His sense of design, aesthetics and flow of information was amazing. I am very
+          pleased with his work and recommend him very highly."
+        </p>
+        <p>
+          <em>- Raju Arora,
+            <br/>Founder of
+            <a href='http://www.kahanibaaz.com/'>Kahanibaaz</a>
+          </em>
+        </p>
+      </div>
+    </section>
+
+
   </article>
-  <article class="fl w-100 w-33-m w-33-l pa2-ns">
-    <a href="./barsoom.html" class="ph2 ph0-ns pb3 link db dim tc">
-      <img src="./img/barsoom.svg"/>
+  <div class='tc w-100 bg-cucumber pa5'>
+    <p class="measure center light-white">If you'd like to know how much a project costs... </p>
+    <a class="dim dib ttu f6 grow no-underline br-pill ph3 pv2 mb2 dib light-white bg-dark-cucumber" href="https://josh407.typeform.com/to/hxjToF">Project Cost Calculator</a>
 
-      <h3 class="f5 f4-ns mb0 black-90 tc">Barsoom</h3>
-      <h3 class="f6 f5 fw4 mt2 black-60 tc">Website and Campaign Design</h3>
-    </a>
-  </article>
-</section>
-</article>
-<div class='tc'>
-  <a class="f6 link dim br-pill ph3 pv2 mv5 dib white bg-cucumber ttu" href="http://joshpitzalis.com/now">See More Work</a>
-</div>
-
-<!-- Change the width and height values to suit you best -->
-<div class="typeform-widget" data-url="https://josh407.typeform.com/to/hxjToF" data-text="Calculator" style="width:100%;height:500px;"></div>
-<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+  </div>
 
 
-<footer class=" mt6 pv5 ph3 ph5-m ph6-l mid-gray bt b--black-10 ">
-  <small class="f6 db tc">© 2017 <b class="ttu">Josh Pitzalis</b>, All Rights Reserved</small>
-  <!-- <div class="tc mt3">
-    <a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
-    <a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
-  </div> -->
-  <img src='./img/diamond.svg' class='mv4 center db'/>
-</footer>
 
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-86031259-1', 'auto');
-  ga('send', 'pageview');
+  <footer class="ph3 ph4-ns pv6 bt b--black-10 black-70 ">
+    <a href="mailto:hello@joshpitzalis.com" class="link b f3 f2-ns dim black-70 lh-solid">hello@joshpitzalis.com</a>
+    <p class="f6 db b ttu lh-solid">© 2017 Josh Pitzalis</p>
+    <div class="mt5">
+      <a href="/now/" title="twitter" class="f6 dib pr2 mid-gray dim">Twitter</a>
+      <a href="/terms/" title="Blog" class="f6 dib ph2 mid-gray dim">Blog</a>
+      <a href="/privacy/" title="newsletter" class="f6 dib pl2 mid-gray dim">Newsletter</a>
+    </div>
+  </footer>
 
-</script>
-  </body>
+  <script>
+    (function (i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+    ga('create', 'UA-86031259-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+</body>
+
 </html>
